add examples of how to use different params for backend sdk methods

--- a/docs/references/backend/organization/get-pending-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-pending-organization-invitation-list.mdx
@@ -25,7 +25,7 @@ const invitations = await clerkClient.organizations.getPendingOrganizationInvita
 
 ### `getPendingOrganizationInvitationList({ limit })`
 
-Retrieves orgnanization invitation list that is filtered by the number of results:
+Retrieves orgnanization invitation list that is filtered by the number of results.
 
 ```tsx
 const organizationId = 'my-organization-id';
@@ -34,5 +34,19 @@ const invitations = await clerkClient.organizations.getPendingOrganizationInvita
   organizationId,
   // returns the first 10 results
   limit: 10,
+});
+```
+
+### `getPendingOrganizationInvitationList({ offset })`
+
+Retrieves orgnanization invitation list that is filtered by the number of results to skip.
+
+```tsx
+const organizationId = 'my-organization-id';
+
+const invitations = await clerkClient.organizations.getPendingOrganizationInvitationList({
+  organizationId,
+  // skips the first 10 results
+  offset: 10,
 });
 ```
