--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -25,7 +25,7 @@ const memberships = await clerkClient.organizations.getOrganizationMembershipLis
 
 ### `getOrganizationMembershipList({ limit })`
 
-Retrieves orgnanization membership list that is filtered by the number of results:
+Retrieves orgnanization membership list that is filtered by the number of results.
 
 ```tsx
 const organizationId = 'my-organization-id';
@@ -34,5 +34,19 @@ const memberships = await clerkClient.organizations.getOrganizationMembershipLis
   organizationId,
   // returns the first 10 memberships
   limit: 10,
+});
+```
+
+### `getOrganizationMembershipList({ offset })`
+
+Retrieves orgnanization membership list that is filtered by the number of results to skip.
+
+```tsx
+const organizationId = 'my-organization-id';
+
+const memberships = await clerkClient.organizations.getOrganizationMembershipList({
+  organizationId,
+  // skips the first 10 memberships
+  offset: 10,
 });
 ```
