--- a/docs/references/backend/user/get-count.mdx
+++ b/docs/references/backend/user/get-count.mdx
@@ -29,7 +29,9 @@ This can also be flitered down by adding parameters of the type `UserCountParams
 
 ### `getCount({ query })`
 
-Retrieves the total number of users matching the query.
+To do a broader match through a list of fields, you can use the query parameter which partially matches the fields: `userId`, `emailAddress`, `phoneNumber`, `username`, `web3Wallet`, and `externalId`.
+
+This example retrieves the total number of users matching the query `test`.
 
 ```tsx
 const totalUsersMatchingTest = await clerkClient.users.getCount({ query: 'test' })
