--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -1,9 +1,13 @@
 ---
-title: Localization
+title: Localization prop (Experimental)
 description: Use the Clerk localizations package to override and provide predefined or custom localizations for your Clerk Components, enabling you to offer localized content or tailor the wording to match your brand.
 ---
 
-# Localization prop
+# Localization prop (Experimental)
+
+<Callout type="warning">
+  This feature is currently experimental and may not behave as expected. If you encounter any issues, please reach out to [support](https://clerk.com/support) with as much detail as possible.
+</Callout>
 
 Clerk offers the ability to override the strings for all of the elements in each of the Clerk Components. This allows you to provide localization for your users or change the wording to suit your brand.
 
