add use of NextjsExampleRepos component

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -4,6 +4,25 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 ---
 
 <TutorialHero 
+  quickstart="remix"
+  beforeYouStart={[
+    {
+      title: "Set up a Clerk application",
+      link: "https://clerk.com/docs/quickstarts/setup-clerk"
+    },
+    {
+      title: "Create a Next.js application",
+      link: "https://nextjs.org/docs/getting-started/installation"
+    }
+  ]}
+>
+- Install `@clerk/nextjs`
+- Set up your environment keys
+- Wrap your Next.js app in `<ClerkProvider/>`  
+- Limit access to authenticated users
+- Embed the `<UserButton/>`
+</TutorialHero>
+{/* <TutorialHero 
   quickstart="nextjs"
   beforeYouStart={[
     {
@@ -15,16 +34,6 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
       link: "https://nextjs.org/docs/getting-started/installation"
     }
   ]}
-  exampleRepo={[
-    {
-      title: "App Router",
-      link: "https://github.com/clerkinc/clerk-nextjs-app-quickstart"
-    },
-    {
-      title: "Pages Router",
-      link: "https://github.com/clerkinc/clerk-nextjs-pages-quickstart"
-    }
-  ]}
 >
 - Install `@clerk/nextjs`
 - Set up your environment keys
@@ -32,6 +41,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 - Limit access to authenticated users
 - Embed the `<UserButton/>`
 </TutorialHero>
+<NextjsExampleRepos /> */}
 
 <Steps>
 
